# kate_s_board

./: .gitignore  README.md  desktop.sh  docker-compose.yml  resources.md  web.sh
desktop/: Cargo.toml
desktop/src/: compute.wgsl  draw.wgsl  main.rs
desktop/src/help/: _main.rs  framework.rs
engine/: Cargo.toml
engine/src/: entity.rs  lib.rs  main.rs  math.rs  node.rs  vector.rs
front/: draw.js  get_bonhomme.js  index.css  index.html  index.js  launcher.js  link.js  math.js  node.js  render.js  test.js  tick.js  wasm_engine.js  wasm_engine_bg.wasm
front/elements/: motor.js  spike_wheel.js
front/games/: autopilot.js  figure_eight.js  inverted_pendulum.js  ping_pong.js  three_wheel_drive.js
front/level/: 001.js  004.js  005.js  007.js  008.js  010.js  011.js  014.js
level/: 002.js  003.js  004.js  006.js  009.js  012.js  013.js  014.js
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
