[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
winit = "*"
env_logger = "*"
pollster = "*"
bytemuck = "*"
nanorand = "*"
web-time = "*"
cfg-if = "*"
log = "*"
encase = "*"

[profile.dev]
opt-level = 1 
