[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"


[dependencies]
image = "*"
wasm-bindgen = "*"
serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }
rand = "*"
#rand = { version = "*", features = ["js"] }
getrandom = { version = "*", features = ["js"] }